Media-Service image upload implementation. FeignClient implementation. ProfileService update-image implementation.